:wrench: Fix spacing

--- a/css/as_card.css
+++ b/css/as_card.css
@@ -1,6 +1,11 @@
+.card-group{
+	margin-bottom: 40px;
+}
+
+
 .card {
   display: block;
-  margin: 0 auto;
+  margin: 0 auto 10px;
   height: 100px;
   width: 100%;
   /*max-width: 500px;*/
@@ -24,10 +29,11 @@
 	display: block;
 	margin: 0 auto;
 	position: relative;
-  top: 50%;
-  left: 34%;
-	width: 58px;
-  transform: translate(-50%, -50%);
+  top: 23%;
+  left: 0%;
+	width: 100%;
+	max-width: 58px;
+  /*transform: translate(-50%, -50%);*/
 }
 
 .card .card-text {
@@ -41,16 +47,17 @@
 
 .card .card-text .card-title {
 	color: #333333;
-  font-weight: bold;
-  padding-top: 10px;
-  font-size: 24px;
+  font-weight: 700;
+  padding-top: 20px;
+  font-size: 16px;
 }
 
 .card .card-text .card-desc {
-  font-weight: light;
-  font-size: 14px;
+  font-weight: 100;
+  font-size: 13px;
+	padding-top: 4px;
   padding-right: 10px;
-  color: #dddddd;
+  color: #CCCCCC;
 }
 
 .card .clear {
@@ -58,11 +65,10 @@
   float: none;
 }
 
-
-
-@media (min-width: 500px){
+@media (min-width: 480px){
 	.card{
 		height: 150px;
+		margin: 0 auto 20px;
 	}
 	.card .card-status{
 		/*background-color: tomato;*/
@@ -72,8 +78,25 @@
 		margin: 0 auto;
 		position: relative;
   	top: 50%;
-  	left: 25%;
+  	left: 20%;
 		width: 68px;
+  	transform: translate(-50%, -50%);	
+	}
+	.card .card-text .card-title{
+		padding-top: 40px;
+	}
+}
+
+@media (min-width: 480px) and (max-width: 600px){
+	.card .card-status{
+		/*background-color: tomato;*/
+	}
+	.card .card-status > img{
+		display: block;
+		margin: 0 auto;
+		position: relative;
+  	top: 50%;
+  	left: 25%;
   	transform: translate(-50%, -50%);	
 	}
 }
