--- a/css/as_dropdown.css
+++ b/css/as_dropdown.css
@@ -12,7 +12,7 @@ select {
 
 /* Custom Select */
 .select {
-	margin: 0 auto;
+	margin: 20px auto 30px;
   position: relative;
   display: block;
   /*width: 20em;*/
@@ -31,7 +31,7 @@ select {
   position: absolute;
   top: 0;
   padding: 0 0 0 0.5em;
-  color: #444;
+  color: #333;
   cursor: pointer;
 }
 
